[tool.poetry]
name = "magisk-frida"
version = "1.0.0"
description = "Run frida-server on boot with Magisk"
authors = [""]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.22"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
