[tool.poetry]
name = "magisk-frida"
version = "1.0.0"
description = "Run frida-server on boot with Magisk"
authors = [""]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.32"

[tool.poetry.dev-dependencies]
autopep8 = "^1.4"
flake8 = "^3.7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
